--- a/app/sass/base/_base.sass
+++ b/app/sass/base/_base.sass
@@ -18,18 +18,18 @@ body
   
 
 body 
+  min-height: 1000px
   min-width: 320px
-  font-family: "Arial", sans-serif
+  font-family: "SegoeUI", sans-serif
   font-size: 18px
-  line-height: 1.2
+  line-height: 1.3
+  font-weight: 400
+  color: #5A5A5A
 
-.row 
-  display: flex
-  flex-wrap: wrap
-  margin: 0 -15px
   
 .container
-  max-width: 1200px
+  outline: 1px solid green
+  max-width: 1190px
   margin: 0 auto
   padding: 0 15px
   +media-lg
@@ -40,3 +40,7 @@ body
     max-width: 430px
   +media-xs
     width: auto
+
+a 
+  text-decoration: none
+  color: inherit
