--- a/app/sass/base/_fonts.sass
+++ b/app/sass/base/_fonts.sass
@@ -1,27 +1,38 @@
 @font-face 
-	font-family: 'Gotham Pro'
-	src: url('../fonts/GothamPro.eot')
-	src: url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/GothamPro.woff') format('woff'),
-	url('../fonts/GothamPro.ttf') format('truetype')
+	font-family: 'SegoeUI'
+	src: url('../fonts/SegoeUI.eot')
+	src: url('../fonts/SegoeUI.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/SegoeUI.woff') format('woff'),
+	url('../fonts/SegoeUI.ttf') format('truetype')
 	font-weight: 400
 	font-style: normal
 	// font-display: swap
 
 @font-face 
-	font-family: 'Gotham Pro'
-	src: url('../fonts/GothamPro-Black.eot')
-	src: url('../fonts/GothamPro-Black.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/GothamPro-Black.woff') format('woff'),
-	url('../fonts/GothamPro-Black.ttf') format('truetype')
-	font-weight: 900
+	font-family: 'SegoeUI'
+	src: url('../fonts/SegoeUI-SemiBold.eot')
+	src: url('../fonts/SegoeUI-SemiBold.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/SegoeUI-SemiBold.woff') format('woff'),
+	url('../fonts/SegoeUI-SemiBold.ttf') format('truetype')
+	font-weight: 600
 	font-style: normal
+	// font-display: swap
 
 @font-face 
-	font-family: 'Gotham Pro'
-	src: url('../fonts/GothamPro-Italic.eot')
-	src: url('../fonts/GothamPro-Italic.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/GothamPro-Italic.woff') format('woff'),
-	url('../fonts/GothamPro-Italic.ttf') format('truetype')
+	font-family: 'SegoeUI'
+	src: url('../fonts/SegoeUI-Bold.eot')
+	src: url('../fonts/SegoeUI-Bold.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/SegoeUI-Bold.woff') format('woff'),
+	url('../fonts/SegoeUI-Bold.ttf') format('truetype')
+	font-weight: 700
+	font-style: normal
+	// font-display: swap
+
+@font-face 
+	font-family: 'DaysOne'
+	src: url('../fonts/DaysOne-Regular.ttf') format('truetype')
 	font-weight: 400
-	font-style: italic
+	font-style: normal
+	// font-display: swap
+
+
