--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -4,10 +4,12 @@
 @import 'base/_fonts'
 @import 'base/_base'
 
-@import 'layout/_section-first'
-@import 'layout/_section-second'
-
 @import 'components/_button'
+
+@import 'pages/_home.sass'
+
+
+
 
 
 
