Finish desctop home.html

--- a/app/sass/base/_base.sass
+++ b/app/sass/base/_base.sass
@@ -18,7 +18,6 @@ body
   
 
 body 
-  min-height: 1000px
   min-width: 320px
   font-family: "SegoeUI", sans-serif
   font-size: 18px
@@ -28,7 +27,7 @@ body
 
   
 .container
-  outline: 1px solid green
+  // outline: 1px solid green
   max-width: 1190px
   margin: 0 auto
   padding: 0 15px
