--- a/app/sass/components/_button.sass
+++ b/app/sass/components/_button.sass
@@ -1,6 +1,5 @@
 .button 
   display: inline-block
-  width: 100%
   padding: 24px 50px
   outline: none
   cursor: pointer
@@ -10,6 +9,7 @@
   font-size: 18px
   font-weight: bold
   transition: .5s 
+  background-color: transparent
   &:hover 
     border: 1px solid #000
     background: radial-gradient(122% 122% at 12% 20%, #3665A4 2.08%, #254583 48.44%, #2459A0 95.83%)
