--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -1,3 +1,28 @@
+// -------------- custom skrollbar ------------------------
+
+::-webkit-scrollbar 
+  width: 12px
+
+ 
+/* Track */
+::-webkit-scrollbar-track 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+  -webkit-border-radius: 10px
+  border-radius: 10px
+
+ 
+/* Handle */
+::-webkit-scrollbar-thumb 
+  -webkit-border-radius: 10px
+  border-radius: 10px
+  background: rgba(54,101,164,0.8)
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5)
+
+::-webkit-scrollbar-thumb:window-inactive 
+  background: rgba(54,101,164,0.4)
+
+
+// ---------------- end ----------------------
 
 .section-title
   text-align: center
