--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -39,11 +39,11 @@
 // --------------------- header ------------------------------  
 
 .header
-  height: 100vh
+  // height: 100vh
   position: relative
   padding-top: 45px 
-  background: #EBEBEB url('../img/header-bg-big.png') no-repeat 
-  background-position:  left -280px bottom -30px
+  background: #EBEBEB url('../img/header-bg-full.png') no-repeat 
+  background-position:  left 0px bottom -30px
 
 .header__plant
   position: absolute
@@ -104,7 +104,6 @@
 .header__bottom-img
   width: 100%
   text-align: center
-  transform: translateY(200px)
 
 .header__bottom-img-text
   display: inline-block
