Add mobile adaptation

--- a/app/sass/components/_button.sass
+++ b/app/sass/components/_button.sass
@@ -14,4 +14,7 @@
     border: 1px solid #000
     background: radial-gradient(122% 122% at 12% 20%, #3665A4 2.08%, #254583 48.44%, #2459A0 95.83%)
     color: #fff
+  +media-sm 
+    padding: 15px 35px 
+    font-size: 16px
 
