--- a/app/sass/abstracts/_mixins.sass
+++ b/app/sass/abstracts/_mixins.sass
@@ -13,3 +13,11 @@
 @mixin media-xs
 	@media (max-width: 575.98px)
 		@content
+
+@mixin media-1600
+	@media (max-width: 1600px)
+		@content
+
+@mixin media-1300
+	@media (max-width: 1300px)
+		@content
