--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -34,6 +34,11 @@
   margin-bottom: 80px
   img 
     width: 230px
+  +media-sm 
+    margin-bottom: 40px
+    font-size: 20px
+    img
+      width: 170px
 
 
 // --------------------- header ------------------------------  
@@ -44,17 +49,43 @@
   padding-top: 45px 
   background: #EBEBEB url('../img/header-bg-full.png') no-repeat 
   background-position:  left 0px bottom -30px
+  +media-1600 
+    background-position:  left -290px bottom -30px
+  +media-lg 
+    background-position:  left -60px bottom 260px
+    background-size: 600px auto
+  +media-md 
+    background-image: none
+  +media-sm 
+    padding-top: 15px
 
 .header__plant
   position: absolute
   right: 0  
   bottom: 0
+  +media-md 
+    bottom: auto 
+    top: 80px
+  +media-sm 
+    width: 130px
+    img 
+      width: 100%
 
 .header__contacts
   display: flex
   justify-content: flex-end
   align-items: center
   margin-bottom: 177px
+  +media-md 
+    margin-bottom: 100px
+  +media-sm 
+    text-align: center
+    flex-direction: column
+    margin-bottom: 50px
+
+.header__contacts-wrap
+  display: flex
+  align-items: center
 
 .header__contacts-tel 
   margin-right: 35px
@@ -62,6 +93,11 @@
   a 
     font-weight: 700
     color: #FA3134
+  +media-sm 
+    margin-right: 15px
+    font-size: 18px
+    a 
+      white-space: nowrap
 
 .header__contacts-social
   display: flex
@@ -70,10 +106,17 @@
     width: 42px
     height: 42px
     border-radius: 50%
+  +media-sm 
+    a
+      width: 35px
+      height: 35px
+      
 
 .header__contacts-fb
   margin-right: 30px
   background: url('../img/facebook.svg') no-repeat center
+  +media-sm 
+    margin-right: 15px
 
 .header__contacts-ins
   background: url('../img/instagram.svg') no-repeat center
@@ -93,17 +136,36 @@
     a
       font-weight: 700
       color: #082A58
+  +media-1600 
+    position: static
+    margin-left: 40px
+  +media-sm
+    flex-shrink: 0
+    order: -1
+    margin-bottom: 15px
+    align-self: flex-end
   
 .header__bottom
   display: flex
   justify-content: space-between
+  +media-md 
+    flex-direction: column
 
 .header__bottom-left
   margin-left: 160px
+  +media-lg 
+    margin-left: 0px
+  +media-md
+    order: 2
 
 .header__bottom-img
   width: 100%
   text-align: center
+  +media-sm 
+    width: 90%
+    margin: 0 auto
+    img 
+      width: 100%
 
 .header__bottom-img-text
   display: inline-block
@@ -112,19 +174,38 @@
   color: #082A58
   background: rgba(255, 255, 255, 0.4) 
   transform: translateY(-16px)
+  +media-md 
+    display: block
+    width: 270px 
+    margin: 0 auto
+
 
 .header__bottom-right
   flex-shrink: 0
   width: 590px
   margin-right: 37px
   text-align: center
+  +media-lg 
+    width: 570px
+  +media-md 
+    margin: 0 auto
+    margin-bottom: 30px
+  +media-sm 
+    width: 100%
 
 .header__title
   margin-bottom: 24px
+  +media-sm 
+    width: 260px
+    margin: 0 auto
+    img 
+      width: 100%
 
 .header__title-1
-  font-size: 28px
+  font-size: 24px
   margin-bottom: 18px
+  +media-sm 
+    font-size: 22px
 
 .header__title-2
   text-transform: uppercase
@@ -132,26 +213,45 @@
   font-size: 36px
   color: #082A58
   margin-bottom: 11px
+  +media-sm 
+    font-size: 19px
 
 .header__title-3
   font-size: 28px
   margin-bottom: 35px
+  +media-sm 
+    font-size: 20px
+    margin-bottom: 20px
 
 .header__buttons
   display: flex 
   justify-content: space-between
   padding-left: 30px
+  +media-sm 
+    padding-left: 0
+    flex-direction: column
+    .button 
+      width: 100%
+    .header__btn
+      margin-bottom: 15px
+
 
 // --------------------- target ------------------------------
 
 .target 
   padding: 90px 0px
+  +media-sm 
+    padding: 60px 0px
+
 
 .target__subtitle
   text-align: center 
   font-size: 28px
   color: #082A58
   margin-bottom: 40px
+  +media-sm 
+    font-size: 24px
+    margin-bottom: 30px
 
 .target__center
   position: relative
@@ -160,10 +260,25 @@
   width: 740px
   margin: 0 auto
   margin-bottom: 40px
+  +media-md 
+    margin-bottom: 50px
+  +media-sm 
+    // width: 100%
+
+.target__img-wrap
+  +media-md 
+    position: absolute
+    top: -90px
+    right: -130px
+    transform: scale(0.7)
+  +media-sm 
+    display: none
 
 .target__img
   position: relative
   transform: translateX(-20px)
+  +media-lg 
+    transform: translateX(-20px) scale(0.9)
 .target__full 
   position: relative
   // z-index: 1
@@ -204,6 +319,8 @@
   width: 230px
   img 
     width: 100%
+  +media-md 
+    right: 120px
 
 .target__list
   // outline: 1px solid green
@@ -219,6 +336,22 @@
     margin-bottom: 60px
   span 
     font-weight: 400  
+  +media-md 
+    position: static
+    transform: translate(0, 0) !important
+    list-style: inside
+    list-style-position: outside
+    li 
+      transform: translate(0, 0) !important
+      text-align: left 
+      margin-bottom: 20px !important
+      width: auto !important
+  +media-sm   
+    width: 100%
+    padding-left: 15px
+  
+  
+
 
 .target__list-left
   transform: translateX(-60px)
@@ -234,6 +367,8 @@
     transform: translateX(-310px)
   li:nth-child(5)
     transform: translateX(-280px)
+  +media-lg 
+    transform: translateX(-45px)
 
 .target__list-right
   transform: translate(210px, -20px)
@@ -248,6 +383,11 @@
     transform: translateX(170px)
   li:nth-child(4)
     transform: translateX(180px)
+  +media-lg 
+    transform: translate(190px, -20px)
+    li:nth-child(3)
+      width: 230px
+      margin-bottom: 40px
 
 
 .target__row
@@ -255,6 +395,10 @@
   display: flex
   justify-content: space-between
   margin: 0 -33px
+  +media-sm 
+    flex-direction: column 
+    align-items: center
+    margin: 0
 
 .target__line
   position: absolute
@@ -271,6 +415,11 @@
   display: flex
   flex-direction: column
   align-items: center
+  +media-md 
+    padding: 0 25px
+  +media-sm 
+    width: 100%
+    margin-bottom: 30px
 
 .target__item-img
   position: relative
@@ -292,6 +441,7 @@
   &.item-3
     background: url('../img/target-item-3.png') no-repeat center
     background-color: #fff
+  
 
 .target__item-round
   position: relative
@@ -345,11 +495,16 @@
   position: relative
   padding: 120px 0px
   background: radial-gradient(164.65% 609.5% at 11.85% 16.59%, #EBEBEB 0%, #FFFFFF 49.49%, #EEEEEE 100%)
-
+  +media-sm 
+    padding: 60px 0px
 .effect__top
   display: flex
   justify-content: space-between 
   align-items: center
+  +media-md 
+    margin-bottom: 30px
+  +media-sm 
+    flex-direction: column
 
 .effect__plant
   position: absolute
@@ -359,6 +514,14 @@
   &.bottom 
     bottom: 100px
     left: 0
+  +media-sm 
+    width: 130px
+    img 
+      width: 100%
+
+.effect__top-mid
+  +media-sm 
+    margin: 15px 0px
 
 .effect__top-left,
 .effect__top-right 
@@ -366,6 +529,10 @@
   font-family: $title
   font-size: 30px
   color: #FA3134
+  +media-sm 
+    font-size: 25px
+    margin-bottom: 15px
+    text-align: center !important
 
 .effect__top-left
   text-align: right
@@ -429,10 +596,15 @@
   color: #FA3134 
 
 .effect__bottom
+  position: relative
   display: flex
   justify-content: space-between
+  +media-sm 
+    flex-direction: column
   
 .effect__list
+  position: relative
+  z-index: 1
   width: 280px
   padding: 0
   margin: 0
@@ -470,6 +642,8 @@
       transform: scale(1)
     &::after 
       transform: scale(1.1)
+  +media-sm 
+    width: 100%
 
 .effect__list.left 
   text-align: right
@@ -503,6 +677,14 @@
     background-image: url('../img/effect-7.png')
   li:nth-child(8)::after
     background-image: url('../img/effect-8.png')
+  +media-sm 
+    li
+      padding-right: 80px
+      margin-bottom: 40px
+    li::after
+      width: 40px
+      height: 50px
+      background-size: contain 
 
 .effect__list.right
   text-align: left
@@ -511,6 +693,11 @@
     padding-left: 30px
   span 
     left: 0
+  +media-sm 
+    li 
+      margin-bottom: 30px
+    li:last-child 
+      margin-bottom: 0
       
 
 
@@ -520,10 +707,22 @@
   transform: translateX(20px)
   img 
     width: 100%
+  +media-lg
+    margin-top: 90px
+  +media-md 
+    position: absolute
+    top: -100px
+    left: 0 
+    opacity: .3
+    transform: translateX(30px)
+  +media-sm 
+    opacity: 0.1
 
 // --------------------- prevention ------------------------------
 .prevention
   padding: 100px 0px
+  +media-sm 
+    padding: 60px 0px
 
 .prevention__top
   position: relative
@@ -533,6 +732,10 @@
   display: flex 
   justify-content: space-between
   margin-bottom: 100px
+  +media-lg 
+    margin-bottom: 0
+  +media-sm 
+    flex-direction: column
   
 
 .prevention__list
@@ -574,22 +777,44 @@
       transform: scale(1)
     &::after 
       transform: scale(1.1)
+  +media-md
+    width: 355px
+  +media-sm 
+    width: 100%
+    li,li:last-child  
+      margin-bottom: 20px
 
 
 .prevention__bottom
   position: relative
   display: flex
   justify-content: flex-end
+  +media-lg 
+    flex-direction: column
 
 .prevention__bottom-left
   position: absolute
   left: -240px
   top: -130px
+  +media-lg 
+    position: static
+  +media-sm
+    height: 350px 
+    left: 0
+    .target__center
+      transform: translate(-210px, -150px) scale(.6)
+    .target__block img 
+      transform: scale(.8)
+    
 
 
 .prevention__bottom-right
   flex-shrink: 0
   width: 675px
+  +media-lg 
+    margin: 0 auto
+  +media-sm
+    width: 100%
 
 .prevention__head
   display: flex 
@@ -598,6 +823,9 @@
   max-width: 560px
   margin: 0 auto
   margin-bottom: 35px
+  +media-sm 
+    flex-direction: column
+
 
 .prevention__head-title
   font-size: 20
@@ -605,6 +833,12 @@
   color: #FA3134
   img 
     width: 170px
+  +media-sm 
+    text-align: center
+    width: 190px
+    margin: 0 auto
+    margin-bottom: 15px
+    
 
 .prevention__subtitle
   color: #082A58
@@ -631,6 +865,10 @@
     border-right: 1px solid #C4C4C4
   &:last-child 
     text-align: center
+  +media-sm 
+    padding: 9px
+    &:first-child 
+      padding-left: 0px
   
 
 // --------------------- health ------------------------------
@@ -639,11 +877,22 @@
   position: relative
   padding: 100px 0px
   background: radial-gradient(164.65% 609.5% at 11.85% 16.59%, #EBEBEB 0%, #FFFFFF 49.49%, #EEEEEE 100%)
+  +media-md 
+    height: 1250px
+  +media-sm 
+    height: auto
+    padding: 60px 0
 
 .health__plant
   position: absolute
   left: 0
   bottom: 30px
+  +media-sm 
+    width: 130px
+    bottom: auto 
+    top: 100px
+    img 
+      width: 100%
 
 .health__buttons
   position: relative
@@ -660,6 +909,13 @@
     right: 100px
     height: 1px 
     background-color: #C4C4C4
+  +media-md 
+    width: auto
+  +media-sm 
+    flex-direction: column
+    margin-bottom: 30px
+    .button 
+      width: 100%
 
 .health__btn
   position: relative
@@ -672,6 +928,8 @@
       background: radial-gradient(122% 122% at 12% 20%, #3665A4 2.08%, #254583 48.44%, #2459A0 95.83%)
       color: #fff
       cursor: default
+  +media-sm 
+    margin-bottom: 20px
 
 
 .health__item
@@ -683,6 +941,9 @@
 .health__item-top
   display: flex
   margin-bottom: 50px
+  +media-sm 
+    flex-direction: column
+    margin-bottom: 20px
 
 
 .health__item-tab
@@ -701,6 +962,9 @@
     color: #FA3134
     text-decoration: none
     cursor: default
+  +media-sm 
+    margin-right: 0
+    margin-bottom: 20px
 
 .health__item-content
   position: relative
@@ -723,6 +987,7 @@
     margin-bottom: 0
   img 
     width: 130px
+
 .health__list.vertical 
   display: flex
   li 
@@ -730,11 +995,25 @@
     margin-bottom: 0
   li:first-child 
     margin-left: 0
+  +media-sm
+    display: block
+    li
+      padding-left: 25px
+      margin-bottom: 27px
+      margin-left: 0px
+
 .health__list.height 
   li 
     margin-bottom: 47px
   li:last-child 
     margin-bottom: 0
+  +media-sm 
+    li 
+      margin-bottom: 24px
+    li:last-child 
+      margin-bottom: 0  
+
+
   
 
 .health__text
@@ -749,6 +1028,11 @@
   right: 0
   img 
     width: 100%
+  +media-md 
+    width: 330px
+  +media-sm 
+    position: static
+    width: 100%
 
 // --------------------- contact ------------------------------
 
@@ -756,14 +1040,23 @@
   padding: 60px 0px 
   background: url('../img/contact-bg.png') no-repeat
   background-position: 190px 110px
+  +media-md 
+    background-position: -120px 110px
 
 .contact__row
   display: flex
   justify-content: space-between
+  +media-md   
+    flex-direction: column
 
 .contact__left
   width: 360px
   margin-right: 30px
+  +media-md 
+    order: 2
+    margin: 0 auto
+  +media-sm 
+    width: 90%
 
 .contact__btn
   text-align: center
@@ -772,6 +1065,10 @@
   width: 760px
   margin-right: 20px
   margin-top: 30px
+  +media-md 
+    width: auto
+    margin: 0
+    margin-bottom: 50px
 
 .contact__title
   text-transform: uppercase
@@ -784,17 +1081,27 @@
   font-size: 20px
   color: #FA3134
   margin-bottom: 30px
+  +media-sm 
+    font-size: 18px
+    margin-bottom: 25px
 
 .contact__form-title
   font-weight: 700
   font-size: 20px
   color: #082A58
   margin-bottom: 54px
+  +media-sm 
+    font-size: 18px
+    margin-bottom: 40px
 
 .contact__form-row
   display: flex 
   justify-content: space-between
+  align-items: center
   margin-bottom: 48px
+  +media-lg
+    flex-direction: column
+  
 
 .contact__form-item
   width: 200px
@@ -807,6 +1114,16 @@
   &::placeholder 
     color: rgba(86, 87, 90, 0.5)
     font-weight: 700
+  +media-lg 
+    margin-bottom: 20px
+  +media-lg
+    width: 240px
+    &:last-child
+      margin-right: 0
+  +media-sm   
+    width: 100%
+    margin-right: 0
+
 
 input.button 
   padding: 24px 30px
@@ -827,15 +1144,24 @@ input.button
   a 
     font-weight: 700
     color: #FA3134
+    white-space: nowrap
+
+.contact__img 
+  img 
+    width: 100%
   
 // --------------------- footer ------------------------------
 
 .footer 
   padding: 50px 0px
   background: radial-gradient(122% 122% at 12% 20%, #3665A4 2.08%, #254583 48.44%, #2459A0 95.83%)
+  +media-sm 
+    padding: 35px 0px
 
 .footer__img
   margin-bottom: 30px
+  img 
+    width: 100%
 
 .footer__text
   color: rgba(255, 255, 255, 0.8)
@@ -844,6 +1170,8 @@ input.button
   a 
     color: #fff
     font-weight: 700
+  +media-sm 
+    margin-bottom: 30px
 
 .footer__links
   display: flex
@@ -855,3 +1183,10 @@ input.button
     font-weight: 700
   a:last-child 
     margin-right: 0
+  +media-sm 
+    flex-direction: column
+    align-items: center
+    a,a:last-child  
+      margin: 0 auto
+      margin-bottom: 15px
+      
