--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -264,6 +264,7 @@
   +media-sm 
     width: 100%
 
+
 .target__img-wrap
   +media-md 
     position: absolute
@@ -722,6 +723,8 @@
   padding: 100px 0px
   +media-sm 
     padding: 60px 0px
+    .target__center
+      width: 740px
 
 .prevention__top
   position: relative
@@ -801,7 +804,7 @@
     height: 350px 
     left: 0
     .target__center
-      transform: translate(-210px, -150px) scale(.6)
+      transform: translate(-220px, -150px) scale(.6)
     .target__block img 
       transform: scale(.8)
     
@@ -1225,7 +1228,7 @@ input.button
   +media-sm 
     top: 15px
     width: 330px
-    padding: 20px
+    padding: 10px 20px
     height: auto
   +media-374  
     width: 290px
