--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -156,13 +156,19 @@
   +media-lg 
     margin-left: 0px
   +media-md
-    order: 2
+    // display: none
+    position: absolute
+    bottom: 110px
+    left: 50%
+    transform: translate(-50%, 0)
+  +media-sm 
+    bottom: 170px
 
 .header__bottom-img
   width: 100%
   text-align: center
   +media-sm 
-    width: 90%
+    width: 240px
     margin: 0 auto
     img 
       width: 100%
@@ -219,9 +225,11 @@
 .header__title-3
   font-size: 28px
   margin-bottom: 35px
+  +media-md 
+    margin-bottom: 500px
   +media-sm 
     font-size: 20px
-    margin-bottom: 20px
+    margin-bottom: 350px
 
 .header__buttons
   display: flex 
@@ -605,7 +613,7 @@
 .effect__list
   position: relative
   z-index: 1
-  width: 280px
+  width: 285px
   padding: 0
   margin: 0
   list-style: none
@@ -677,11 +685,21 @@
     background-image: url('../img/effect-7.png')
   li:nth-child(8)::after
     background-image: url('../img/effect-8.png')
-  +media-sm 
+  +media-sm
+    border-bottom: 1px solid #5A5A5A
+    margin-bottom: 30px
     li
-      padding-right: 80px
+      position: relative
+      text-align: left
+      padding-right: 0px
+      padding-left: 80px
       margin-bottom: 40px
+      span 
+        position: absolute
+        left: 0
     li::after
+      left: 20px
+      right: auto
       width: 40px
       height: 50px
       background-size: contain 
@@ -709,12 +727,12 @@
     width: 100%
   +media-lg
     margin-top: 90px
-  +media-md 
+  +media-lg
     position: absolute
     top: -100px
-    left: 0 
+    left: 50% 
+    transform: translate(-50%, 0)
     opacity: .3
-    transform: translateX(30px)
   +media-sm 
     opacity: 0.1
 
